# lesson_10_2

./: pyproject.toml
src/: task2.py
tests/: conftest.py  test_task1.py  test_task2.py
