[tool.poetry]
name = "lesson-10-2"
version = "0.1.0"
description = ""
authors = ["Anton Fomenko <antonfomenko1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
